--- a/index.html
+++ b/index.html
@@ -8,23 +8,7 @@
 </head>
 <body>
     <h1>Åzze</h1>
-    <p>moi maailma/hello world</p>
-    <html xmlns="http://www.w3.org/1999/xhtml">rfhjkglfhd hjfkolrs  h gf
-        s gfg fds
-        g fd
-        g fds
-        g f
-        dsg
-        dsf
-        g df
-        g 
-        dsfg dsfgh gds
-        ghf dsaja <fieldset> df hj fds
-             fg vhjf d'
-             fv <fieldset>g             ghfd
-            gfghghjgf   ghfghk  <h1>jkg hjghj    hjg hkg    hjghjg  hjkg gdshkjghjghjghghj  <h1>gds h   <h1> gds    <fieldset> d        <s> rt   r  e   y   uy           io  iu i   u   i   y   kj  <h1>
-                fhjdkslghjdsflj      hufo ghu    vhnj   h hjoh w3i  yhi o hkj    h ij    h   h <i> hu    h u     huo     hufo ghu ghu    ghug <u> gdsu g    u <b>yhfujsdkhfdslkjhfdkjslfhgfdkl  <b><u>lg    yig <b>gdshyib      b   yigbhbhkj <a href="hgfvjdsfbhvkjdsfhgfkjlshglkjdshf"><a href="ujiklfödhjglk">ajdfklsaöhflkjsad</a></a></b></u></b></b></u></i>
-            </h1></s></fieldset></h1></h1></h1>
-             </fieldset>        </fieldset>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/LL7CkKu3ow4" title="Jetpack Joyride in BONELAB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <img src="http://84.249.120.228:25565" alt="">
 </body>
 </html>
