--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Åzze</h1>
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/LL7CkKu3ow4" title="Jetpack Joyride in BONELAB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="http://84.249.120.228:25565" alt="">
+    <img src="https://5575-84-249-120-228.ngrok.io">
 </body>
 </html>
